Small paragraph fix

--- a/includes/languages/index_en.html
+++ b/includes/languages/index_en.html
@@ -18,7 +18,7 @@
             <div class="help__content">
                 <h2 class="help__heading">How to use?</h2>
                 <p class="help__paragraph">
-                    Simple number systems converter calculates a number binary, octal, decimal and hexadecimal systems.
+                    Simple number systems converter calculates a number to binary, octal, decimal and hexadecimal systems.
                     Currently accepts only integers and positive numbers.
                 </p>
                 <div class="help__list-container">
