Revert "Contact script"
This reverts commit 64835b01cc593cca84de3b85919f40efc84b5a88.

--- a/includes/languages/index_en.html
+++ b/includes/languages/index_en.html
@@ -106,7 +106,7 @@
         </div>
 
 <!-- TODO: Add form method and contact script in PHP -->
-        <form class="contact contact--hidden" id="contact" action="index.php" method="post">
+        <form class="contact contact--hidden" id="contact">
             <h3 class="menuComponentHeading">Contact me</h3>
             <p class="menuComponentInfo">
                 Here you can write a message. Remember to be accurate with your question or problem. I will get back to you on e-mail within 24 hours.
